ui/tables/table-editable.reel/table-editable.css
.TableEditable { position: relative; }

.TableEditable-toolbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: .5em;
}

.TableEditable-title {
    /* font-size: 1.25em; */
    display: inline-block;
}

/* Select Cells */

.Table-selectAll,
.Table-selectRow {
    flex-grow: 0;
    padding: .25em;
    padding-left: .5em;
    padding-right: 0;
}

/* Controls */

.TableEditable-rowControls {
    position: absolute;
    background: #3d4c5b;
    padding: .5em;
    transform: translateY(-1px);
    border-bottom-left-radius:  4px;
    border-bottom-right-radius: 4px;
    border: 1px solid #1a1d1f;
    border-top: none;
    box-shadow: 0 2px 2px -1px rgba(0,0,0,.3);
}

/* New Row */

.TableEditable .Table-body-top.Table-row-group .Table-cells {
    /* magic # based on checkbox width */
    padding-left: 2.5em;
    /* border: 1px solid #1a1d1f; */
    background-color: #3d4c5b;
}


/* Header Cells */

.TableHeaderLayout-row { display: flex; }

/*

BODY

*/

/* Row Cells */

.TableEditable .Table-cells {
    flex: 1;
    display: flex;
}

/* Row Cell */

.TableEditable .Table-cells > div {
    padding: .5em;
    flex: 1;
}

/* Empty State */

.Table-emptyState {
    width: 100%;
    border: 1px solid #282828;
    padding: 1em;
    color: #939E9F;
    line-height: 1em;
    text-align: center;
    border-top: none;
    background-color: rgba(0,0,0,.1);
}

